make blog section and updated footer

--- a/about.html
+++ b/about.html
@@ -86,9 +86,9 @@
             quas cumque voluptatem dolore veritatis cum, perspiciatis facere
           </p>
           <h5 class="my-4">NewsLetter</h5>
-          <input class="p-1" type="text" placeholder="Email ID" /><a
+          <input class="p-2 border" type="text" placeholder="Email ID" /><a
             href="#"
-            class="btn btn-light btn-sm rounded-0"
+            class="btn btn-light rounded-0 p-2 mb"
             >JOIN US</a
           >
           <h5 class="mt-4">Social</h5>
