--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <title>Blog</title>
     <!-- Font Style -->
     <link
       href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
@@ -63,13 +63,13 @@
     </div>
     <div class="jumbotron mb-0 p-0">
       <div class="row m-0">
-        <div class="col-sm-9 m-0 p-4 border">
-          <div class="d-flex w-100 flex-wrap justify-content-between">
-            <div class="w-50 mr-1 mb-2 bg-white">
-              <img class="w-100" src="images/hero3.jpeg" alt="blog-img" />
+        <div class="col-sm-10 m-0 p-4 border">
+          <div class="flex-property">
+            <div class="blog-post-width bg-white align-self-start">
+              <img class="w-100" src="images/hero.jpeg" alt="blog-img" />
               <div class="card-body align-self-center">
                 <h5 class="card-title">
-                  <a href="post.html" class="nav-link text-dark">
+                  <a href="post.html" class="nav-link pl-0 text-dark">
                     Lorem ipsum dolor sit amet consectetur adipisicing
                   </a>
                 </h5>
@@ -86,11 +86,11 @@
               </div>
             </div>
 
-            <div class="w-25 bg-white">
-              <img class="w-100" src="images/hero3.jpeg" alt="blog-img" />
+            <div class="blog-post-width bg-white align-self-start">
+              <img class="w-100" src="images/product-2.jpeg" alt="blog-img" />
               <div class="card-body align-self-center">
                 <h5 class="card-title">
-                  <a href="post.html" class="nav-link text-dark">
+                  <a href="post.html" class="nav-link pl-0 text-dark">
                     Lorem ipsum dolor sit amet consectetur adipisicing
                   </a>
                 </h5>
@@ -107,11 +107,11 @@
               </div>
             </div>
 
-            <div class="w-25 bg-white">
+            <div class="blog-post-width bg-white align-self-start">
               <img class="w-100" src="images/hero3.jpeg" alt="blog-img" />
               <div class="card-body align-self-center">
                 <h5 class="card-title">
-                  <a href="post.html" class="nav-link text-dark">
+                  <a href="post.html" class="nav-link pl-0 text-dark">
                     Lorem ipsum dolor sit amet consectetur adipisicing
                   </a>
                 </h5>
@@ -128,11 +128,11 @@
               </div>
             </div>
 
-            <div class="w-25 bg-white">
-              <img class="w-100" src="images/hero3.jpeg" alt="blog-img" />
+            <div class="blog-post-width bg-white align-self-start">
+              <img class="w-100" src="images/hero2.jpeg" alt="blog-img" />
               <div class="card-body align-self-center">
                 <h5 class="card-title">
-                  <a href="post.html" class="nav-link text-dark">
+                  <a href="post.html" class="nav-link pl-0 text-dark">
                     Lorem ipsum dolor sit amet consectetur adipisicing
                   </a>
                 </h5>
@@ -149,11 +149,11 @@
               </div>
             </div>
 
-            <div class="w-25 bg-white">
-              <img class="w-100" src="images/hero3.jpeg" alt="blog-img" />
+            <div class="blog-post-width bg-white align-self-start">
+              <img class="w-100" src="images/product-1.jpeg" alt="blog-img" />
               <div class="card-body align-self-center">
                 <h5 class="card-title">
-                  <a href="post.html" class="nav-link text-dark">
+                  <a href="post.html" class="nav-link pl-0 text-dark">
                     Lorem ipsum dolor sit amet consectetur adipisicing
                   </a>
                 </h5>
@@ -169,17 +169,11 @@
                 >
               </div>
             </div>
-
-            <!-- <div class="card">
-              <img src="images/hero4.jpeg" alt="blog" class="card-img" />
-              <div class="blog-post-back">
-                <a href="post.html" class="text-dark"
-                  ><i class="fa fa-plus post-symbol" aria-hidden="true"></i
-                ></a>
-              </div>
-              <div class="card-body">
+            <div class="blog-post-width bg-white align-self-start">
+              <img class="w-100" src="images/product-3.jpeg" alt="blog-img" />
+              <div class="card-body align-self-center">
                 <h5 class="card-title">
-                  <a href="post.html" class="nav-link text-dark">
+                  <a href="post.html" class="nav-link pl-0 text-dark">
                     Lorem ipsum dolor sit amet consectetur adipisicing
                   </a>
                 </h5>
@@ -194,14 +188,37 @@
                   >Published in <span class="text-dark">Catagory</span></small
                 >
               </div>
-            </div> -->
+            </div>
           </div>
+          <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+              <li class="page-item">
+                <a class="page-link text-dark" href="#" aria-label="Previous">
+                  <span aria-hidden="true">&laquo;</span>
+                </a>
+              </li>
+              <li class="page-item">
+                <a class="page-link text-dark" href="#">1</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link text-dark" href="#">2</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link text-dark" href="#">3</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link text-dark" href="#" aria-label="Next">
+                  <span aria-hidden="true">&raquo;</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
         </div>
 
-        <div class="col-sm-3 bg-white p-4">
+        <div class="col-sm-2 bg-white p-4">
           <form action="">
             <input
-              class="p-1 border"
+              class="w-75 p-1 border"
               type="text"
               placeholder="Search.."
               name="search"
@@ -263,9 +280,9 @@
             quas cumque voluptatem dolore veritatis cum, perspiciatis facere
           </p>
           <h5 class="my-4">NewsLetter</h5>
-          <input class="p-1" type="text" placeholder="Email ID" /><a
+          <input class="p-2 border" type="text" placeholder="Email ID" /><a
             href="#"
-            class="btn btn-light btn-sm rounded-0"
+            class="btn btn-light rounded-0 p-2 mb"
             >JOIN US</a
           >
           <h5 class="mt-4">Social</h5>
